Closed
Bug 1336929
Opened 8 years ago
Closed 8 years ago
Fennec sometimes get stuck in a state where there is a perma-bar of white on the top of the screen
Categories
(Firefox for Android Graveyard :: Toolbar, defect, P3)
Tracking
(fennec53+, firefox51 unaffected, firefox52 unaffected, firefox53+ fixed, firefox54+ verified)
VERIFIED
FIXED
Firefox 54
| Tracking | Status | |
|---|---|---|
| fennec | 53+ | --- |
| firefox51 | --- | unaffected |
| firefox52 | --- | unaffected |
| firefox53 | + | fixed |
| firefox54 | + | verified |
People
(Reporter: JanH, Assigned: rbarker)
References
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
|
6.24 KB,
patch
|
jchen
:
review+
dvander
:
review+
gchang
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
|
59.50 KB,
image/jpeg
|
Details |
Companion to bug 1305969 - occasionally Fennec gets into a state where there is a permanent white space the size of the toolbar immediately *below* the toolbar.
> 4 Feb 2017
> 10:11 gcp Nightly is busted?
> 10:11 gcp I have a bar the size of the awesomebar above all content'
I've seen this myself recently, although I can't say for sure whether only on Nightly/local builds or on Release as well.
Comment 1•8 years ago
|
||
Likely we won't investigate this until bug 1335895 is done.
| Reporter | ||
Comment 2•8 years ago
|
||
Found some hopefully easy and reliable STR:
1. Cold start Firefox.
2. As soon as the UI becomes visible, press the Home button to background it again.
3. Wait a bit to give Gecko time to start up.
4. Bring Firefox into the foreground again.
There should now be a permanent bit of white space below the toolbar. After the next background/foreground cycle, this issue will fix itself.
If it helps narrowing things down, I can't reproduce this in 50.
Has STR: --- → yes
Comment 3•8 years ago
|
||
(In reply to Jan Henning [:JanH] from comment #2)
> If it helps narrowing things down, I can't reproduce this in 50.
If this is a regression then we should probably track down a regression range to avoid shipping it.
status-firefox54:
--- → affected
Keywords: regression,
regressionwindow-wanted
| Reporter | ||
Comment 4•8 years ago
|
||
Regressing push: https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&revision=8aa58e6577516d8bde4ff9d4555e59d6a511fc4f&filter-searchStr=android%20api%2015%20opt
Blocks: 1328752
Has Regression Range: --- → yes
status-firefox51:
--- → unaffected
status-firefox52:
--- → unaffected
status-firefox53:
--- → affected
Flags: needinfo?(rbarker)
Keywords: regressionwindow-wanted
Comment 5•8 years ago
|
||
[Tracking Requested - why for this release]: Regression in Fx 53
| Assignee | ||
Comment 6•8 years ago
|
||
My guess is that a re-paint is failing after a resize. Just rotating device and rotating back fixes the issue. I can reproduce the issue. One change that I made in Bug 1328752 is always requesting the repaint from the UI thread instead of requesting it from both UI and main thread which IPC/IPDL doesn't like. I'll look there first.
Flags: needinfo?(rbarker)
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → rbarker
| Assignee | ||
Comment 7•8 years ago
|
||
The SyncResumeResizeCompositor is failing because the UiCompositorControllerChild hasn't established its connection with the compositor thread yet so its a race condition. Looking into possible solutions now.
| Assignee | ||
Comment 8•8 years ago
|
||
| Assignee | ||
Comment 9•8 years ago
|
||
Attachment #8834651 -
Attachment is obsolete: true
| Assignee | ||
Updated•8 years ago
|
Attachment #8834675 -
Flags: review?(nchen)
Attachment #8834675 -
Flags: review?(dvander)
| Assignee | ||
Comment 10•8 years ago
|
||
Updated•8 years ago
|
tracking-fennec: ? → 53+
Updated•8 years ago
|
Attachment #8834675 -
Flags: review?(nchen) → review+
Comment 11•8 years ago
|
||
¡Hola Randall!
Is the bug pictured in the attachment this bug?
In my case, the height of the white space is a bit larger than the awesome bar.
Also taps on the screen seem to be miss interpreted by about the same amount of space.
¡Gracias!
Alex
Flags: needinfo?(rbarker)
| Assignee | ||
Comment 12•8 years ago
|
||
(In reply to alex_mayorga from comment #11)
> Created attachment 8835580 [details]
> photo5539583883226490793.jpg
>
> ¡Hola Randall!
>
> Is the bug pictured in the attachment this bug?
>
> In my case, the height of the white space is a bit larger than the awesome
> bar.
>
> Also taps on the screen seem to be miss interpreted by about the same amount
> of space.
>
> ¡Gracias!
> Alex
This is probably the same bug. The size of the white space has nothing to do with size of the awesome bar but instead what ever size the compositor was initialized with.
Flags: needinfo?(rbarker)
Attachment #8834675 -
Flags: review?(dvander) → review+
Comment 14•8 years ago
|
||
Pushed by rbarker@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6f43298f5271
Have UiCompositorControllerChild cache surface resize when not yet initialized. r=jchen,dvander
Comment 15•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 54
Comment 16•8 years ago
|
||
Please request Aurora approval on this when you get a chance.
Flags: needinfo?(rbarker)
| Reporter | ||
Comment 17•8 years ago
|
||
I can no longer reproduce this on a local build based on the current mozilla-central as well as today's Nightly.
Status: RESOLVED → VERIFIED
| Reporter | ||
Updated•8 years ago
|
| Assignee | ||
Comment 19•8 years ago
|
||
Comment on attachment 8834675 [details] [diff] [review]
0001-Bug-1336929-Have-UiCompositorControllerChild-cache-surface-resize-when-not-yet-initialized-17020715-cc182a0.patch
Approval Request Comment
[Feature/Bug causing the regression]:Bug 1328752
[User impact if declined]: The page content will sometimes be shifted down causing a white bar across the top of the content page and touch events will not align with content.
[Is this code covered by automated tests?]: No.
[Has the fix been verified in Nightly?]: Yes
[Needs manual test from QE? If yes, steps to reproduce]: No.
[List of other uplifts needed for the feature/fix]: None.
[Is the change risky?]: No
[Why is the change risky/not risky?]: It just adds a simple cache for when the class is not initialized yet.
[String changes made/needed]: None
Flags: needinfo?(rbarker)
Attachment #8834675 -
Flags: approval-mozilla-aurora?
Comment 20•8 years ago
|
||
Comment on attachment 8834675 [details] [diff] [review]
0001-Bug-1336929-Have-UiCompositorControllerChild-cache-surface-resize-when-not-yet-initialized-17020715-cc182a0.patch
Fix a UI issue that a white bar below the toolbar. Aurora53+.
Attachment #8834675 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 21•8 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•