Bug 1336929 - Have UiCompositorControllerChild cache surface resize when not yet initialized. r=jchen,dvander a=gchang

--HG--
extra : source : 6f43298f5271ebed750b18366ceb044a96814387